# SparkTrading

./: .gitignore  README.md  README.txt  kafka_monitor.py  kafka_setup.py  pyproject.toml  run.py  verify_install.py
data-gen/: generate.py
data_gen/: generate.py
data_gen/strategies/: __init__.py  basic.py  momentum.py
pattern-detect/: kafka.py
pattern_detect/: detect.py  processor.py
pattern_detect/strategies/: __init__.py  base.py  momentum_norm.py  momentum_spark.py
